<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme" />

        <TextView
            android:id="@+id/txtAllOrders"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="10dp"
            android:scrollbars="vertical"
            android:overScrollMode="always" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="49dp"
                android:padding="8dp"
                android:text="@string/selected_order_label"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtCancelOrderNumber"
                android:layout_width="186dp"
                android:layout_height="62dp"
                android:layout_weight="1"
                android:hint="@string/order_number_hint"
                android:inputType="number"
                android:padding="8dp" />

            <Button
                android:id="@+id/btnCancelOrder"
                android:layout_width="wrap_content"
                android:layout_height="62dp"
                android:text="@string/cancel_order" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>